--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@antfu/eslint-config": "^0.38.5",
     "@iconify-json/carbon": "^1.1.16",
     "@iconify-json/logos": "^1.1.25",
+    "@iconify-json/mdi": "^1.1.50",
     "@iconify-json/twemoji": "^1.1.11",
     "@nuxt/devtools": "^0.4.1",
     "@nuxtjs/color-mode": "^3.2.0",
