--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@vueuse/nuxt": "^10.0.2",
     "bumpp": "^9.1.0",
     "eslint": "^8.38.0",
+    "ofetch": "^1.0.1",
     "typescript": "^5.0.4"
   }
 }
